refactor: little improvements